examples/test/testpolicy9923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9923
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key43: value34
      key3: value24
      key11: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value5
      podSelector:
        matchLabels:
          key8: value30
          key18: value18
